<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="in.projecteka.resetpassword.viewmodel.ResetPasswordFragmentViewModel" />

        <variable
            name="parentViewModel"
            type="in.projecteka.resetpassword.viewmodel.ResetPasswordActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:layout_height="match_parent">
        <include
            android:id="@+id/progress_bar_layout"
            app:showProgress="@{viewModel.showProgress}"
            app:message="@{viewModel.showProgressMessage}"
            layout="@layout/progress_layout"/>


        <TextView
            android:id="@+id/lbl_consent_manager_id"
            style="@style/TextAppearance.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/content_margin_medium"
            android:textSize="@dimen/text_size_large"
            android:layout_marginTop="@dimen/prefix_margin"
            android:text="@string/set_password_lbl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lbl_create_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin_medium"
            android:layout_marginLeft="@dimen/content_margin_medium"
            android:layout_marginTop="24dp"
            android:text="@string/create_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_consent_manager_id" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_create_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_large"
            android:layout_marginStart="@dimen/content_margin_medium"
            android:layout_marginLeft="@dimen/content_margin_medium"
            android:layout_marginTop="@dimen/content_margin_small"
            android:layout_marginRight="@dimen/content_margin_medium"
            android:layout_marginEnd="@dimen/content_margin_medium"
            app:cardElevation="@dimen/content_padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_create_password">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="@dimen/content_margin_medium">

                <EditText
                    android:id="@+id/et_create_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/content_margin_extra_extra_small"
                    android:layout_weight=".7"
                    android:background="@color/white"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/content_margin_medium"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="@{viewModel.createPasswordInputType}"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text="@={viewModel.inputCreatePasswordLbl}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/btn_show_hide_create_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/transparent"
                    android:drawablePadding="@dimen/content_margin_medium"
                    android:focusable="true"
                    android:gravity="end"
                    android:onClick="@{() -> viewModel.toggleCreatePasswordVisible()}"
                    android:text="@{viewModel.inputCreatePasswordVisibilityToggleLbl}"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="@string/show" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/create_password_error_text"
            style="@style/TextAppearance.ErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_extra_extra_small"
            android:text="@string/password_validation_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/content_margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/cv_create_password"
            app:toggledVisibility="@{viewModel.showErrorCreatePassword}" />

        <TextView
            android:id="@+id/lbl_confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_margin_medium"
            android:layout_marginLeft="@dimen/content_margin_medium"
            android:layout_marginTop="24dp"
            android:text="@string/confirm_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_password_error_text" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_large"
            android:layout_marginStart="@dimen/content_margin_medium"
            android:layout_marginLeft="@dimen/content_margin_medium"
            android:layout_marginTop="@dimen/content_margin_small"
            android:layout_marginEnd="@dimen/content_margin_medium"
            android:layout_marginRight="@dimen/content_margin_medium"
            app:cardElevation="@dimen/content_padding_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_confirm_password">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="@dimen/content_margin_medium">

                <EditText
                    android:id="@+id/et_confirm_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/content_margin_extra_extra_small"
                    android:layout_weight=".7"
                    android:background="@color/white"
                    android:cursorVisible="true"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/content_margin_medium"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="@{viewModel.confirmPasswordInputType}"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text="@={viewModel.inputConfirmPasswordLbl}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <Button
                    android:id="@+id/btn_show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:background="@color/transparent"
                    android:drawablePadding="@dimen/content_margin_medium"
                    android:focusable="true"
                    android:gravity="end"
                    android:onClick="@{() -> viewModel.toggleConfirmPasswordVisible()}"
                    android:text="@{viewModel.inputConfirmPasswordVisibilityToggleLbl}"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="@string/show" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/confirm_password_mismatch_text"
            style="@style/TextAppearance.ErrorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_extra_extra_small"
            android:text="@string/password_mismatch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/content_margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/cv_confirm_password"
            app:toggledVisibility="@{viewModel.showConfirmPasswordMismatch}" />
        <TextView
            android:id="@+id/confirm_password_match_text"
            android:textSize="@dimen/text_size_extra_small"
            android:textColor="@color/password_match_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_margin_extra_extra_small"
            android:text="@string/password_match"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/content_margin_medium"
            app:layout_constraintTop_toBottomOf="@+id/cv_confirm_password"
            app:toggledVisibility="@{viewModel.showConfirmPasswordMatch}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="@dimen/content_margin_extra_extra_large"
            android:text="@string/confirm"
            android:layout_margin="@dimen/content_margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="@{() -> viewModel.resetPassword()}"
            android:enabled="@{viewModel.setConfirmButtonEnabled}"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>